cloudformation/aws_env.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Nginx server with custom index.html

Resources:
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/24
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  MySubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: MySubnet

  MyRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: MyRouteTable

  MyRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref MySubnet
      RouteTableId: !Ref MyRouteTable

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP, HTTPS, and SSH access
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  MyEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      # KeyName: your-key-pair  # Replace with your actual key pair name
      ImageId: ami-0809dd5035d9217b8
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref MySubnet
          GroupSet:
            - !Ref InstanceSecurityGroup
      IamInstanceProfile: EC2_SSM_ReadOnly
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y nginx git aws-cli
          TOKEN=$(aws ssm get-parameter --name "cuong" --with-decryption --query "Parameter.Value" --output text)
          git clone https://PhanCuong86:${TOKEN}@github.com/PhanCuong86/CloudFormation-GitHub-Action ~/CloudFormation-GitHub-Action
          sudo cp ~/CloudFormation-GitHub-Action/src/index.html /usr/share/nginx/html/index.html
          sudo systemctl start nginx
          sudo systemctl enable nginx
  # 104 Sao chép file index.html từ repository đã clone vào thư mục mặc định của Nginx (/usr/share/nginx/html/), đây là nơi Nginx sẽ phục vụ file HTML.

Outputs:
  InstancePublicDNS:
    Description: Public DNS of the instance
    Value: !GetAtt 
      - MyEC2Instance
      - PublicDnsName
  InstanceId:
    Description: "The instance ID of the EC2 instance"
    Value: !Ref MyEC2Instance
